--- a/svit-mandriv/css/style.css
+++ b/svit-mandriv/css/style.css
@@ -53,8 +53,8 @@ body {
 
 @font-face {
   font-family: 'icomoon2';
-  src: url("../../icons/icomoon.eot?bvbpcl");
-  src: url("../../icons/icomoon.eot?bvbpcl#iefix") format("embedded-opentype"), url("../../icons/icomoon.ttf?bvbpcl") format("truetype"), url("../../icons/icomoon.woff?bvbpcl") format("woff"), url("../../icons/icomoon.svg?bvbpcl#icomoon") format("svg");
+  src: url("../icons/icomoon.eot?bvbpcl");
+  src: url("../icons/icomoon.eot?bvbpcl#iefix") format("embedded-opentype"), url("../icons/icomoon.ttf?bvbpcl") format("truetype"), url("../icons/icomoon.woff?bvbpcl") format("woff"), url("../icons/icomoon.svg?bvbpcl#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -62,8 +62,8 @@ body {
 
 @font-face {
   font-family: 'icomoon2';
-  src: url("../../icons/ico.eot?j9lt8t");
-  src: url("../../icons/ico.eot?j9lt8t#iefix") format("embedded-opentype"), url("../../icons/ico.ttf?j9lt8t") format("truetype"), url("../../icons/ico.woff?j9lt8t") format("woff"), url("../../icons/ico.svg?j9lt8t#icomoon") format("svg");
+  src: url("../icons/ico.eot?j9lt8t");
+  src: url("../icons/ico.eot?j9lt8t#iefix") format("embedded-opentype"), url("../icons/ico.ttf?j9lt8t") format("truetype"), url("../icons/ico.woff?j9lt8t") format("woff"), url("../icons/ico.svg?j9lt8t#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -470,7 +470,7 @@ body {
 .simple-pagination li:last-of-type {
   position: absolute;
   width: 65px;
-  background-image: url(../../img/icons/arrowPagination.svg);
+  background-image: url(../img/icons/arrowPagination.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -979,7 +979,7 @@ body {
   content: "";
   height: 5px;
   width: 10px;
-  background-image: url("../../img/arrow-down.svg");
+  background-image: url("../img/arrow-down.svg");
   background-position: center;
   background-repeat: no-repeat;
   position: absolute;
@@ -1354,7 +1354,7 @@ body {
   display: inline-block;
   width: 24px;
   height: 40px;
-  background-image: url("../../img/arrow_header_more.svg");
+  background-image: url("../img/arrow_header_more.svg");
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
@@ -2012,7 +2012,7 @@ body {
   content: "";
   height: 19px;
   width: 19px;
-  background-image: url("../../img/Search.svg");
+  background-image: url("../img/Search.svg");
   position: absolute;
   right: 100px;
   top: 51%;
@@ -2700,12 +2700,12 @@ body {
 
 .offers .slider .slick-next {
   right: 0;
-  background-image: url("../../img/next.svg");
+  background-image: url("../img/next.svg");
 }
 
 .offers .slider .slick-prev {
   left: 0;
-  background-image: url("../../img/prev.svg");
+  background-image: url("../img/prev.svg");
 }
 
 .offers__slider--small {
