--- a/webtune/css/style.css
+++ b/webtune/css/style.css
@@ -18,6 +18,7 @@ html,
 body,
 a,
 p,
+ol,
 ul,
 li,
 h1,
@@ -35,6 +36,7 @@ textarea {
   border-width: 0;
   font-family: "Montserrat", sans-serif;
   text-decoration: none;
+  color: #1d153d;
 }
 
 * {
@@ -63,6 +65,21 @@ main {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
+}
+
+h2,
+.heading2 {
+  font-weight: 500;
+  line-height: 1.3;
+  color: #1D153D;
+}
+
+.subHeading {
+  line-height: 1.7;
+  letter-spacing: 0.35em;
+  text-transform: uppercase;
+  color: #a073ff;
+  font-weight: 500;
 }
 
 @font-face {
@@ -868,6 +885,10 @@ main {
   display: none;
 }
 
+.newSection {
+  margin: 0 auto;
+}
+
 .newHead {
   background-color: #1d153d;
   min-height: 100vh;
@@ -1108,6 +1129,10 @@ main {
   display: none;
 }
 
+.newSingleHead {
+  min-height: 700px;
+}
+
 @-webkit-keyframes oneClick {
   0% {
     -webkit-transform: translate(-49%, -51%) scale(1);
@@ -1191,16 +1216,9 @@ main {
 
 .newMission__subHeading {
   margin-bottom: 5px;
-  color: #a073ff;
-  font-weight: 500;
-  line-height: 1.7;
-  letter-spacing: 0.35em;
-  text-transform: uppercase;
 }
 
 .newMission__heading {
-  font-weight: 500;
-  line-height: 50px;
   color: #fff;
 }
 
@@ -1414,19 +1432,11 @@ main {
 }
 
 .newServices__subHeading {
-  font-weight: 500;
-  line-height: 1.7;
-  letter-spacing: 0.35em;
-  color: #a073ff;
   text-align: center;
-  text-transform: uppercase;
 }
 
 .newServices__heading {
-  font-weight: 500;
-  line-height: 49px;
   text-align: center;
-  color: #1d153d;
 }
 
 .newServices__list {
@@ -1618,8 +1628,6 @@ main {
 
 .newDiscuss__heading {
   text-align: center;
-  font-weight: bold;
-  line-height: 1.33;
   text-align: center;
   -webkit-font-feature-settings: 'liga' off;
           font-feature-settings: 'liga' off;
@@ -1648,8 +1656,6 @@ main {
 }
 
 .greatClients__heading {
-  font-weight: 500;
-  font-size: 42px;
   line-height: 1.24;
   text-align: center;
   letter-spacing: -0.4px;
@@ -1768,19 +1774,8 @@ main {
           justify-content: space-between;
 }
 
-.newPortfolioNav__subHeading {
-  font-weight: 500;
-  line-height: 1.69;
-  letter-spacing: 0.35em;
-  color: #a073ff;
-  text-transform: uppercase;
-}
-
 .newPortfolioNav__heading {
   margin: 20px 0 12px;
-  font-weight: 500;
-  line-height: 1.33;
-  color: #00062b;
 }
 
 .newPortfolioNav__button a {
@@ -2040,20 +2035,8 @@ main {
 }
 
 .newPostCarousel__heading {
-  font-weight: 500;
-  font-size: 48px;
   line-height: 1.12;
   color: #fff;
-}
-
-.newPostCarousel__subHeading {
-  text-transform: uppercase;
-  margin-bottom: 6px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.69;
-  letter-spacing: 0.35em;
-  color: #a073ff;
 }
 
 .newPostCarousel__link {
@@ -2356,7 +2339,6 @@ main {
 }
 
 .contactSection__heading {
-  font-weight: 500;
   line-height: 1.5;
   color: #fff;
   max-width: 700px;
@@ -2365,8 +2347,6 @@ main {
 .contactSection__subHeading {
   max-width: 430px;
   margin: 62px 0 13px;
-  font-weight: bold;
-  font-size: 30px;
   line-height: 1.33;
   letter-spacing: 0.07em;
   text-transform: uppercase;
@@ -2517,17 +2497,11 @@ main {
 
 .newChoose__subHeading {
   text-align: center;
-  font-weight: 500;
-  line-height: 1.7;
-  letter-spacing: 0.35em;
-  color: #a073ff;
-  text-transform: uppercase;
 }
 
 .newChoose__heading {
   margin: 10px 0 178px;
   text-align: center;
-  font-weight: 500;
   line-height: 1.12;
   color: #fff;
 }
@@ -2607,7 +2581,422 @@ main {
   background: linear-gradient(180deg, rgba(43, 19, 156, 0.7) 22.92%, rgba(160, 115, 255, 0.266) 100%);
 }
 
+.newBlog {
+  padding-top: 52px;
+  padding-bottom: 77px;
+}
+
+.newBlog .verticalLines {
+  z-index: -1;
+}
+
+.newBlog__categories {
+  margin-bottom: 63px;
+}
+
+.newBlog__categories ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.newBlog__categories ul li {
+  margin-right: 30px;
+}
+
+.newBlog__categories ul li:last-of-type {
+  margin-right: 0;
+}
+
+.newBlog__categories ul li a {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.31;
+  color: #1d153d;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+}
+
+.newBlog__categories ul li a span {
+  font-size: 12px;
+  position: relative;
+  bottom: 13px;
+  right: 5px;
+}
+
+.newBlog__categories ul li a:hover {
+  color: #a073ff;
+}
+
+.newBlog__categories ul .active a {
+  color: #a073ff;
+}
+
+.newBlog__list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
+}
+
+.newBlog__item {
+  height: 443px;
+  background-color: #eee;
+  position: relative;
+}
+
+.newBlog__item a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  height: 100%;
+  width: 100%;
+  padding: 30px 38px 20px 30px;
+  position: relative;
+}
+
+.newBlog__item a::before,
+.newBlog__item a::after {
+  z-index: 0;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 60%;
+  width: 100%;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+}
+
+.newBlog__item a::before {
+  z-index: 1;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(255, 255, 255, 0.1)), color-stop(42.38%, rgba(255, 255, 255, 0.015)), color-stop(96.35%, rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 0)));
+  background: -o-linear-gradient(bottom, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.015) 42.38%, rgba(255, 255, 255, 0) 96.35%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(360deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.015) 42.38%, rgba(255, 255, 255, 0) 96.35%, rgba(255, 255, 255, 0) 100%);
+  -webkit-backdrop-filter: blur(35px);
+          backdrop-filter: blur(35px);
+}
+
+.newBlog__item a::after {
+  background: -o-linear-gradient(269.79deg, rgba(43, 19, 156, 0.7) 21.59%, rgba(160, 115, 255, 0.266) 71.25%, rgba(255, 255, 255, 0) 104.16%);
+  background: linear-gradient(180.21deg, rgba(43, 19, 156, 0.7) 21.59%, rgba(160, 115, 255, 0.266) 71.25%, rgba(255, 255, 255, 0) 104.16%);
+  background-blend-mode: multiply;
+  -webkit-transform: matrix(1, 0, 0, -1, 0, 0);
+      -ms-transform: matrix(1, 0, 0, -1, 0, 0);
+          transform: matrix(1, 0, 0, -1, 0, 0);
+}
+
+.newBlog__item a:hover::after {
+  height: 100%;
+}
+
+.newBlog__photo {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.newBlog__photo img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.newBlog__title {
+  z-index: 2;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.6;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.newBlog__paragraph {
+  z-index: 2;
+  font-size: 14px;
+  line-height: 1.5;
+  color: #fff;
+  margin-bottom: 22px;
+}
+
+.newBlog__date {
+  border-top: 1px solid rgba(255, 255, 255, 0.25);
+  z-index: 2;
+  padding-top: 16px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.14;
+  color: #fff;
+}
+
+.newBlog__pagination-container {
+  margin-top: 77px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.newBlog__pagination-container span,
+.newBlog__pagination-container a {
+  color: #1d153d;
+  height: 40px;
+  width: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 16px;
+  line-height: 1.5;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+  margin: 1px;
+}
+
+.newBlog__pagination-container span:hover,
+.newBlog__pagination-container a:hover {
+  background-color: #c4a8ff;
+  color: #fff;
+}
+
+.newBlog__pagination-container .current {
+  background-color: #c4a8ff;
+  color: #fff;
+  font-weight: 700;
+}
+
+.newBlog__pagination-container .next,
+.newBlog__pagination-container .prev {
+  position: relative;
+}
+
+.newBlog__pagination-container .next::before,
+.newBlog__pagination-container .prev::before {
+  content: "";
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+}
+
+.newBlog__pagination-container .next:hover,
+.newBlog__pagination-container .prev:hover {
+  background-color: #fff;
+}
+
+.newBlog__pagination-container .prev {
+  right: 10px;
+}
+
+.newBlog__pagination-container .prev::before {
+  border-right: 8px solid rgba(31, 18, 58, 0.22);
+}
+
+.newBlog__pagination-container .prev:hover::before {
+  border-right: 8px solid #a073ff;
+}
+
+.newBlog__pagination-container .next {
+  left: 10px;
+}
+
+.newBlog__pagination-container .next::before {
+  border-left: 10px solid rgba(31, 18, 58, 0.22);
+}
+
+.newBlog__pagination-container .next:hover::before {
+  border-left: 10px solid #a073ff;
+}
+
+.newOnePost__comments,
+.newOnePost__wrapper {
+  max-width: 866px;
+  margin: 0 auto;
+}
+
+.newOnePost__wrapper h2 {
+  max-width: 560px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 30px;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 1.25;
+  color: #1d153d;
+}
+
+.newOnePost__wrapper h3 {
+  padding: 0 50px;
+  margin: 10px 17px 20px;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.33;
+  color: #1d153d;
+}
+
+.newOnePost__wrapper ul,
+.newOnePost__wrapper ol,
+.newOnePost__wrapper li,
+.newOnePost__wrapper p {
+  margin-bottom: 20px;
+  padding: 0 50px;
+  color: #1d153d;
+  font-size: 14px;
+  line-height: 1.71;
+}
+
+.newOnePost__wrapper p img {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.newOnePost__wrapper p:first-of-type {
+  padding-bottom: 30px;
+  position: relative;
+}
+
+.newOnePost__wrapper p:first-of-type::after {
+  content: "";
+  height: 1px;
+  width: calc(100% - 100px);
+  position: absolute;
+  bottom: 0;
+  left: 50px;
+  background-color: #1d153d;
+}
+
+.newOnePost__wrapper p:first-of-type img {
+  width: calc(100% + 100px);
+  -webkit-transform: translateX(-50px);
+      -ms-transform: translateX(-50px);
+          transform: translateX(-50px);
+}
+
+.newOnePost__wrapper li {
+  padding: 0 20px;
+  margin-bottom: 0;
+  position: relative;
+}
+
+.newOnePost__wrapper ul li:before {
+  position: absolute;
+  content: "";
+  height: 6px;
+  width: 6px;
+  border-radius: 50%;
+  background-color: #1d153d;
+  left: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.newOnePost__wrapper ol {
+  list-style: none;
+  counter-reset: my-awesome-counter;
+}
+
+.newOnePost__wrapper ol li {
+  counter-increment: my-awesome-counter;
+}
+
+.newOnePost__wrapper ol li::before {
+  content: counter(my-awesome-counter) ".";
+  position: absolute;
+  left: 0;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.71;
+}
+
+.newOnePost__comments li {
+  background-color: #a073ff;
+  padding: 37px 60px 38px 77px;
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.newOnePost__comments li::before {
+  content: "";
+  position: absolute;
+  height: 55px;
+  width: 69px;
+  left: 77px;
+  top: 3px;
+  background-image: url("../../img/commentsBg.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.newOnePost__comments li p {
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.5;
+  font-weight: 500;
+}
+
+.newTeamMission {
+  max-width: 1067px;
+}
+
+.newTeamMission__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.newTeamMission__left {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 630px;
+          flex: 0 0 630px;
+}
+
 @media (min-width: 767px) {
+  h2,
+  .heading2 {
+    font-size: calc(24px + 16 * (100vw / 1440));
+  }
+
+  .subHeading {
+    font-size: calc(10px + 6 * (100vw / 1440));
+  }
+
   .newHeader {
     padding-top: calc(14px + 24 * (100vw / 1440));
   }
@@ -2692,14 +3081,6 @@ main {
     padding-right: calc(0px + 210 * (100vw / 1440));
   }
 
-  .newMission__subHeading {
-    font-size: calc(10px + 6 * (100vw / 1440));
-  }
-
-  .newMission__heading {
-    font-size: calc(24px + 16 * (100vw / 1440));
-  }
-
   .newMission__paragraph {
     font-size: calc(12px + 4 * (100vw / 1440));
   }
@@ -2722,10 +3103,6 @@ main {
 
   .newMission__count a {
     font-size: calc(12px + 12 * (100vw / 1440));
-  }
-
-  .newServices__subHeading {
-    font-size: calc(10px + 6 * (100vw / 1440));
   }
 
   .newServices__heading {
@@ -2834,10 +3211,6 @@ main {
     margin-bottom: calc(20px + 35 * (100vw / 1440));
   }
 
-  .newPortfolioNav__subHeading {
-    font-size: calc(10px + 6 * (100vw / 1440));
-  }
-
   .newPortfolioNav__heading {
     margin-top: calc(0px + 20 * (100vw / 1440));
   }
@@ -2869,10 +3242,6 @@ main {
 
   .newPostCarousel__subHeading {
     margin-bottom: calc(0px + 6 * (100vw / 1440));
-  }
-
-  .newPostCarousel__subHeading {
-    font-size: calc(10px + 6 * (100vw / 1440));
   }
 
   .newPostCarousel__link {
@@ -2971,10 +3340,6 @@ main {
     padding-left: calc(0px + 320 * (100vw / 1440));
   }
 
-  .newChoose__subHeading {
-    font-size: calc(10px + 6 * (100vw / 1440));
-  }
-
   .newChoose__heading {
     margin-bottom: calc(165px + 13 * (100vw / 1440));
   }
@@ -3002,9 +3367,22 @@ main {
   .newChoose__photoItem {
     height: calc(228px + 127 * (100vw / 1440));
   }
+
+  .new-single-post-main .newPostCarousel__top {
+    margin-bottom: calc(0px + 0 * (100vw / 1440));
+  }
 }
 
 @media (min-width: 1440px) {
+  h2,
+  .heading2 {
+    font-size: 40px;
+  }
+
+  .subHeading {
+    font-size: 16px;
+  }
+
   .newHeader .burgerBtn > span {
     font-size: 16px;
   }
@@ -3049,14 +3427,6 @@ main {
     padding-right: 210px;
   }
 
-  .newMission__subHeading {
-    font-size: 16px;
-  }
-
-  .newMission__heading {
-    font-size: 40px;
-  }
-
   .newMission__paragraph {
     font-size: 16px;
   }
@@ -3071,10 +3441,6 @@ main {
 
   .newMission__count a {
     font-size: 24px;
-  }
-
-  .newServices__subHeading {
-    font-size: 16px;
   }
 
   .newServices__heading {
@@ -3123,10 +3489,6 @@ main {
     padding-left: 208px;
   }
 
-  .newPortfolioNav__subHeading {
-    font-size: 16px;
-  }
-
   .newPortfolioNav__heading {
     font-size: 40px;
   }
@@ -3138,10 +3500,6 @@ main {
 
   .newPostCarousel__heading {
     font-size: 48px;
-  }
-
-  .newPostCarousel__subHeading {
-    font-size: 16px;
   }
 
   .newPostCarousel__link a {
@@ -3202,10 +3560,6 @@ main {
 
   .newChoose__content {
     padding-left: 320px;
-  }
-
-  .newChoose__subHeading {
-    font-size: 16px;
   }
 
   .newChoose__heading {
@@ -3945,6 +4299,15 @@ main {
 }
 
 @media (max-width: 767px) {
+  h2,
+  .heading2 {
+    font-size: calc(24px + 27.2 * ((100vw - 320px) / 1440));
+  }
+
+  .subHeading {
+    font-size: calc(10px + 10.2 * ((100vw - 320px) / 1440));
+  }
+
   .newHeader {
     padding-top: calc(14px + 40.8 * ((100vw - 320px) / 1440));
   }
@@ -4029,14 +4392,6 @@ main {
     padding-right: calc(0px + 357 * ((100vw - 320px) / 1440));
   }
 
-  .newMission__subHeading {
-    font-size: calc(10px + 10.2 * ((100vw - 320px) / 1440));
-  }
-
-  .newMission__heading {
-    font-size: calc(24px + 27.2 * ((100vw - 320px) / 1440));
-  }
-
   .newMission__paragraph {
     font-size: calc(12px + 6.8 * ((100vw - 320px) / 1440));
   }
@@ -4059,10 +4414,6 @@ main {
 
   .newMission__count a {
     font-size: calc(12px + 20.4 * ((100vw - 320px) / 1440));
-  }
-
-  .newServices__subHeading {
-    font-size: calc(10px + 10.2 * ((100vw - 320px) / 1440));
   }
 
   .newServices__heading {
@@ -4171,10 +4522,6 @@ main {
     margin-bottom: calc(20px + 59.5 * ((100vw - 320px) / 1440));
   }
 
-  .newPortfolioNav__subHeading {
-    font-size: calc(10px + 10.2 * ((100vw - 320px) / 1440));
-  }
-
   .newPortfolioNav__heading {
     margin-top: calc(0px + 34 * ((100vw - 320px) / 1440));
   }
@@ -4206,10 +4553,6 @@ main {
 
   .newPostCarousel__subHeading {
     margin-bottom: calc(0px + 10.2 * ((100vw - 320px) / 1440));
-  }
-
-  .newPostCarousel__subHeading {
-    font-size: calc(10px + 10.2 * ((100vw - 320px) / 1440));
   }
 
   .newPostCarousel__link {
@@ -4308,10 +4651,6 @@ main {
     padding-left: calc(0px + 544 * ((100vw - 320px) / 1440));
   }
 
-  .newChoose__subHeading {
-    font-size: calc(10px + 10.2 * ((100vw - 320px) / 1440));
-  }
-
   .newChoose__heading {
     margin-bottom: calc(165px + 22.1 * ((100vw - 320px) / 1440));
   }
@@ -4338,6 +4677,10 @@ main {
 
   .newChoose__photoItem {
     height: calc(228px + 215.9 * ((100vw - 320px) / 1440));
+  }
+
+  .new-single-post-main .newPostCarousel__top {
+    margin-bottom: calc(0px + 0 * ((100vw - 320px) / 1440));
   }
 }
 
